--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.0.1",
-    "mongoose": "^5.12.15"
+    "mongoose": "^5.12.15",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3",
+    "winston-elasticsearch": "^0.15.7"
   }
 }
