--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mocha": "^9.0.1",
     "mongoose": "^5.12.15",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "winston-elasticsearch": "^0.15.7"
   }
